helm-chart/harbor-ha/harbor/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-portal-ingress
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
  # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "harbor.heun.leedh.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
